Được tạo bằng Colaboratory

--- a/Untitled8.ipynb
+++ b/Untitled8.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled8.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNf8PKBE+yUAk8FHPBcc/Vz",
+      "authorship_tag": "ABX9TyNX8BM67GpQyzeBYeEg66Df",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,55 +36,58 @@
         "import pickle\n",
         "\n",
         "\"\"\"\n",
-        "Class name: Person\n",
-        "Implementation: set name, Phonenumber, Email in outside\n",
+        "::Name of class: Person::\n",
+        ":param PERSON_NAME, PERSON_PHONE_NUMBER, PERSON_EMAIL: \n",
+        ":return: name, phone, email of person\n",
         "\"\"\"\n",
         "\n",
         "class Person():\n",
         "    def __init__(self, PERSON_NAME, PERSON_PHONE_NUMBER, PERSON_EMAIL):\n",
-        "        self.name = PERSON_NAME\n",
-        "        self.phone_number = PERSON_PHONE_NUMBER\n",
-        "        self.email = PERSON_EMAIL\n",
+        "        self.NAME = PERSON_NAME\n",
+        "        self.PHONE_NUMBER = PERSON_PHONE_NUMBER\n",
+        "        self.EMAIL = PERSON_EMAIL\n",
         "\n",
         "    #Print 3 value Name, Phonenumber, Email in outside\n",
         "    def printValueInOutside(self):\n",
-        "        print(f\"Ho va ten: {self.name}\\n\")\n",
-        "        print(f\"SDT: {self.phone_number}\\n\")\n",
-        "        print(f\"Email: {self.email}\\n\")\n",
+        "        print(f\"Ho va ten: {self.NAME}\\n\")\n",
+        "        print(f\"SDT: {self.PHONE_NUMBER}\\n\")\n",
+        "        print(f\"Email: {self.EMAIL}\\n\")\n",
         "\n",
         "\n",
         "\n",
         "\"\"\"\n",
-        "Class name: Student\n",
-        "Implementation: set student number and average mark in outside\n",
-        "Class Inheritance: Person class\n",
+        "::Name of class: Student::\n",
+        ":param STUDENT_NUMBER, STUDENT_AVERAGE_MARK:\n",
+        ":return: return id number, average mark of student\n",
+        "@class inheritance: Person (class)\n",
         "\"\"\"\n",
         "\n",
         "class Student(Person):\n",
         "    def __init__(self, STUDENT_NUMBER, STUDENT_AVERAGE_MARK):\n",
-        "        self.number = STUDENT_NUMBER\n",
-        "        self.average_mark = STUDENT_AVERAGE_MARK\n",
+        "        self.ID_NUMBER = STUDENT_NUMBER\n",
+        "        self.AVERAGE_MARK = STUDENT_AVERAGE_MARK\n",
         "\n",
         "    #Print 2 value student number and average mark in outside\n",
         "    def printValueInOutside(self):\n",
-        "        print(f\"Number student: {self.number}\\n\")\n",
-        "        print(f\"Diem trung binh: {self.average_mark}\\n\")\n",
+        "        print(f\"Number student: {self.ID_NUMBER}\\n\")\n",
+        "        print(f\"Diem trung binh: {self.AVERAGE_MARK}\\n\")\n",
         "\n",
         "\n",
         "\n",
         "\"\"\"\n",
-        "Class name: Professor\n",
-        "Implementation: set salary in outside\n",
-        "Class Inheritance: Person class\n",
+        "::Name of class: Professor::\n",
+        ":param PROFESSOR_SALARY:\n",
+        ":return: salary of professor\n",
+        "@class inheritance: Person (class)\n",
         "\"\"\"\n",
         "\n",
         "class Professor(Person):\n",
         "    def __init__(self, PROFESSOR_SALARY):\n",
-        "        self.salary = PROFESSOR_SALARY\n",
+        "        self.SALARY = PROFESSOR_SALARY\n",
         "\n",
         "    #Print value salary in outside\n",
         "    def printValueInOutside(self):\n",
-        "        print(f\"Salary: {self.salary}\")\n",
+        "        print(f\"Salary: {self.SALARY}\")\n",
         "\n",
         "\n",
         "\n",
@@ -109,26 +112,31 @@
         "\n",
         "\n",
         "\"\"\"\n",
-        "Name Function: Flash sort\n",
-        "@Complexity: O(n)\n",
-        "@Operating principle: divide and rule\n",
-        "@Based on algorithm: Bucket sort\n",
-        "_Implementation process:\n",
+        "::Name of function: flash_sort_increase, flash_sort_increase:: (Using to sort)\n",
+        ":param getlist:\n",
+        ":return: The list is sorted (increase or decrease)\n",
+        "@complexity: O(n)\n",
+        "@operating principle: divide and rule\n",
+        "@based on algorithm: Bucket sort\n",
+        "#Implementation process:\n",
         "    +STEP1: Find minimum value and largest element position in array: min_list, arr_list[max]\n",
         "    +STEP2: Initialization L vector with m elements (corresponds to m classes. Approx, number of layers euqual to 0.45 x n)\n",
         "    +STEP3: Count the number of elements of classes according to the rule: k = int((m - 1) * (arr_list[i] - min_list) / (arr_list[max] - min_list))\n",
         "    +STEP4: Calculate the end position of the subclass j according to the formula: L[j] = L[j] + L[j - 1] (j increase from 1 to m-1)\n",
         "\"\"\"\n",
         "def flash_sort_increase(getList):\n",
-        "    bucket_number = round(0.45 * len(getList))\n",
         "\n",
+        "    \"\"\"\n",
+        "    //STEP 1\n",
+        "    :param getList: \n",
+        "    :return: minimum value and largest element position in array\n",
+        "    \"\"\"\n",
         "    #Initialization list to hold bucket\n",
         "    bucket_list = []\n",
         "\n",
         "    #Initialization 2 parameters for find min value and position with the max value\n",
         "    bucket_max = 0\n",
         "    bucket_min = getList[0]\n",
-        "\n",
         "\n",
         "    #Find max, min in list\n",
         "    for i in range(1, len(getList)):\n",
@@ -137,19 +145,44 @@
         "        if (getList[i] > bucket_max):\n",
         "            getList[i], bucket_max = bucket_max, getList[i]\n",
         "\n",
-        "    #Count the elements in the bucket\n",
+        "\n",
+        "    \"\"\"\n",
+        "    //STEP 2\n",
+        "    :param getList:\n",
+        "    :return: number of bucket\n",
+        "    \"\"\"\n",
+        "    BUCKET_NUMBER = round(0.45 * len(getList))\n",
+        "    \n",
+        "    \n",
+        "    \"\"\"\n",
+        "    //STEP 3\n",
+        "    :param getList: \n",
+        "    :return: the number of elements of classes according to the rule is K (K is variable)\n",
+        "    \"\"\"\n",
         "    for i in range(0, len(getList)):\n",
-        "        k = round((bucket_number - 1) * (getList[i] - bucket_min) / (bucket_max - bucket_min))\n",
+        "        k = round((BUCKET_NUMBER - 1) * (getList[i] - bucket_min) / (bucket_max - bucket_min))\n",
         "        #Invalid elements will be ignored\n",
         "        if bucket_list[k] is None:\n",
         "            bucket_list[k] = 0\n",
         "        bucket_list[k] += 1\n",
-        "        \n",
-        "    #Calculate the last index of each bucket\n",
+        "\n",
+        "\n",
+        "    \"\"\"\n",
+        "    //STEP 4\n",
+        "    :param getList: \n",
+        "    :return: Calculate the end position of the subclass according to the formula\n",
+        "    \"\"\"\n",
         "    for i in range(1, len(getList)):\n",
         "        bucket_list[i] += bucket_list[i - 1]\n",
         "\n",
-        "    #Permutation (No need to use bucket memory)\n",
+        "\n",
+        "    \"\"\"\n",
+        "    //ELEMENT SWAP ALGORITHM\n",
+        "    :param getList: \n",
+        "    :return: the list is sorted\n",
+        "    @Advantages: don't use the memory of the bucket\n",
+        "    *NOTE: IF USING BUCKET-SORT ALGORITHM, YOU NEEDLN'T SWAP AND BREAK HERE\n",
+        "    \"\"\"\n",
         "    hold = getList[0]\n",
         "    move = 0\n",
         "    flash = 0\n",
@@ -164,7 +197,7 @@
         "\n",
         "        flash = getList[para3]\n",
         "        while (para3 != bucket_list[para1]):\n",
-        "            para1 = round((bucket_number - 1) * (getList[i] - bucket_min) / (bucket_max - bucket_min))\n",
+        "            para1 = round((BUCKET_NUMBER - 1) * (getList[i] - bucket_min) / (bucket_max - bucket_min))\n",
         "            hold = getList[para2 ]\n",
         "            para2 = bucket_list[para1] - 1\n",
         "            hold = getList[para2]\n",
@@ -182,35 +215,66 @@
         "\n",
         "\n",
         "def flash_sort_decrease(getList):\n",
-        "    bucket_number = round(0.45 * len(getList))\n",
         "\n",
-        "    # Initialization list to hold bucket\n",
+        "    \"\"\"\n",
+        "    //STEP 1\n",
+        "    :param getList: \n",
+        "    :return: minimum value and largest element position in array\n",
+        "    \"\"\"\n",
+        "    #Initialization list to hold bucket\n",
         "    bucket_list = []\n",
         "\n",
-        "    # Initialization 2 parameters for find min value and position with the max value\n",
+        "    #Initialization 2 parameters for find min value and position with the max value\n",
         "    bucket_min = 0\n",
         "    bucket_max = getList[0]\n",
         "\n",
-        "    # Find max, min in list\n",
+        "\n",
+        "    #Find max, min in list\n",
         "    for i in range(1, len(getList)):\n",
         "        if (getList[i] > bucket_min):\n",
         "            getList[i], bucket_min = bucket_min, getList[i]\n",
         "        if (getList[i] < bucket_max):\n",
         "            getList[i], bucket_max = bucket_max, getList[i]\n",
         "\n",
-        "    # Count the elements in the bucket\n",
+        "\n",
+        "    \"\"\"\n",
+        "    //STEP 2\n",
+        "    :param getList:\n",
+        "    :return: number of bucket\n",
+        "    \"\"\"\n",
+        "    BUCKET_NUMBER = round(0.45 * len(getList))\n",
+        "    \n",
+        "    \n",
+        "    \"\"\"\n",
+        "    //STEP 3\n",
+        "    :param getList: \n",
+        "    :return: the number of elements of classes according to the rule is K (K is variable)\n",
+        "    \"\"\"\n",
         "    for i in range(0, len(getList)):\n",
-        "        k = round((bucket_number - 1) * (getList[i] - bucket_min) / (bucket_max - bucket_min))\n",
-        "        # Invalid elements will be ignored\n",
+        "        k = round((BUCKET_NUMBER - 1) * (getList[i] - bucket_min) / (bucket_max - bucket_min))\n",
+        "        #Invalid elements will be ignored\n",
         "        if bucket_list[k] is None:\n",
         "            bucket_list[k] = 0\n",
         "        bucket_list[k] += 1\n",
         "\n",
-        "    # Calculate the last index of each bucket\n",
+        "\n",
+        "    \"\"\"\n",
+        "    //STEP 4\n",
+        "    :param getList: \n",
+        "    :return: Calculate the end position of the subclass according to the formula\n",
+        "    \"\"\"\n",
         "    for i in range(1, len(getList)):\n",
         "        bucket_list[i] += bucket_list[i - 1]\n",
         "\n",
-        "    # Permutation (No need to use bucket memory)\n",
+        "\n",
+        "\n",
+        "    \"\"\"\n",
+        "    //ELEMENT SWAP ALGORITHM\n",
+        "    :param getList: \n",
+        "    :return: the list is sorted\n",
+        "    @Advantages: don't use the memory of the bucket\n",
+        "    *NOTE: IF USING BUCKET-SORT ALGORITHM, YOU NEEDLN'T SWAP AND BREAK HERE\n",
+        "    \"\"\"\n",
         "    hold = getList[0]\n",
         "    move = 0\n",
         "    flash = 0\n",
@@ -219,20 +283,20 @@
         "    para3 = 0\n",
         "\n",
         "    while (move < len(getList[para1] - 1)):\n",
-        "        # If the element is already in the bucket, there is no need for permutation\n",
+        "        #If the element is already in the bucket, there is no need for permutation\n",
         "        while (para3 > (bucket_list[para1] - 1)):\n",
         "            para3 += 1\n",
         "\n",
         "        flash = getList[para3]\n",
         "        while (para3 != bucket_list[para1]):\n",
-        "            para1 = round((bucket_number - 1) * (getList[i] - bucket_min) / (bucket_max - bucket_min))\n",
-        "            hold = getList[para2]\n",
+        "            para1 = round((BUCKET_NUMBER - 1) * (getList[i] - bucket_min) / (bucket_max - bucket_min))\n",
+        "            hold = getList[para2 ]\n",
         "            para2 = bucket_list[para1] - 1\n",
         "            hold = getList[para2]\n",
         "            flash = hold\n",
         "            move += 1\n",
         "\n",
-        "    # Insertion sort\n",
+        "    #Insertion sort\n",
         "    for para3 in range(1, len(getList)):\n",
         "        hold = getList[para3]\n",
         "        i = para3 - 1\n",
@@ -243,6 +307,14 @@
         "\n",
         "\n",
         "\n",
+        "\"\"\"\n",
+        "::Name of function: handle_file::\n",
+        ":param Person, Student, Professor (class):\n",
+        ":return: \n",
+        "//1: sorted 3 list: Person, Student, Professor:\n",
+        "    +Person list: Sort list of people decrease with name\n",
+        "    +Student list: Sort list of people decrese with \n",
+        "\"\"\"\n",
         "def handle_File():\n",
         "\n",
         "                        #----------------------------------------------------#\n",
@@ -254,7 +326,7 @@
         "    inputData_for_list(handle_File.List_Person)\n",
         "\n",
         "    #Sort list of people decrease with name\n",
-        "    flash_sort_decrease(handle_File.List_Person.name)\n",
+        "    flash_sort_decrease(handle_File.List_Person.NAME)\n",
         "\n",
         "    #Save file with pickle\n",
         "    handle_File.File_Person = open(\"Person\", \"wb\")\n",
@@ -278,7 +350,7 @@
         "    inputData_for_list(handle_File.List_Student)\n",
         "\n",
         "    # Sort list of people decrease with average\n",
-        "    flash_sort_decrease(handle_File.List_Student.average_mark)\n",
+        "    flash_sort_decrease(handle_File.List_Student.AVERAGE_MARK)\n",
         "\n",
         "    # Save file with pickle\n",
         "    handle_File.File_Student = open(\"Person\", \"wb\")\n",
@@ -301,7 +373,7 @@
         "    inputData_for_list(handle_File.List_Professor)\n",
         "\n",
         "    # Sort list of people increase with salary\n",
-        "    flash_sort_increase(handle_File.List_Professor.salary)\n",
+        "    flash_sort_increase(handle_File.List_Professor.SALARY)\n",
         "\n",
         "    # Save file with pickle\n",
         "    handle_File.File_Professor = open(\"Person\", \"wb\")\n",
