Được tạo bằng Colaboratory

--- a/Untitled8.ipynb
+++ b/Untitled8.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Untitled8.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNX8BM67GpQyzeBYeEg66Df",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNvhcqc3vzz1HQ/ldK5Md8H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -152,8 +153,8 @@
         "    :return: number of bucket\n",
         "    \"\"\"\n",
         "    BUCKET_NUMBER = round(0.45 * len(getList))\n",
-        "    \n",
-        "    \n",
+        "\n",
+        "\n",
         "    \"\"\"\n",
         "    //STEP 3\n",
         "    :param getList: \n",
@@ -243,8 +244,8 @@
         "    :return: number of bucket\n",
         "    \"\"\"\n",
         "    BUCKET_NUMBER = round(0.45 * len(getList))\n",
-        "    \n",
-        "    \n",
+        "\n",
+        "\n",
         "    \"\"\"\n",
         "    //STEP 3\n",
         "    :param getList: \n",
@@ -312,8 +313,13 @@
         ":param Person, Student, Professor (class):\n",
         ":return: \n",
         "//1: sorted 3 list: Person, Student, Professor:\n",
-        "    +Person list: Sort list of people decrease with name\n",
-        "    +Student list: Sort list of people decrese with \n",
+        "    +Person (list): Sort list of people decrease with name\n",
+        "    +Student (list): Sort list of people decrese with average\n",
+        "    +Professor (list): Sort list of people increase with salary\n",
+        "    \n",
+        "//2: Save file with pickle\n",
+        "\n",
+        "//3: Read the file and output in screen\n",
         "\"\"\"\n",
         "def handle_File():\n",
         "\n",
@@ -399,14 +405,7 @@
         "    handle_File()\n",
         "\n",
         "if (__name__ = __main__):\n",
-        "    main()\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "    main()"
       ],
       "execution_count": null,
       "outputs": []
